# jarvis

./: .gitignore  CLAUDE.md  LICENSE  PRODUCT.md  README.md  ROADMAP.md
.github/workflows/: ci.yml
apps/desktop/: package-lock.json  package.json
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: app_state.rs  lib.rs
apps/desktop/src-tauri/src/commands/: agent.rs  calendar.rs  diet.rs  google.rs  gym.rs  knowledge.rs  mod.rs  notify.rs  ollama.rs  onboarding.rs  study.rs
apps/desktop/src-tauri/src/core/: mod.rs
apps/desktop/src-tauri/src/core/agent/: agent_loop.rs  mod.rs
apps/desktop/src-tauri/src/core/agent/prompts/: mod.rs
apps/desktop/src-tauri/src/core/agent/provider/: mod.rs  ollama.rs  types.rs
apps/desktop/src-tauri/src/core/agent/tools/: calendar.rs  diet.rs  gym.rs  mod.rs  study.rs  vault.rs
apps/desktop/src-tauri/src/core/db/: migrations.rs  mod.rs
apps/desktop/src-tauri/src/core/db/queries/: calendar.rs  chunks.rs  core_memory.rs  diet.rs  gym.rs  mod.rs  notifications.rs  quiet_feed.rs  search.rs  settings.rs  study.rs
apps/desktop/src-tauri/src/core/google/: calendar_client.rs  mod.rs  oauth.rs  sync.rs  token_store.rs
apps/desktop/src-tauri/src/core/memory/: chunker.rs  core_memory.rs  embedder.rs  mod.rs  retriever.rs  watcher.rs
apps/desktop/src-tauri/src/core/notify/: config.rs  dispatch.rs  mod.rs  ntfy.rs
apps/desktop/src-tauri/src/core/scheduler/: mod.rs
apps/desktop/src-tauri/src/core/setup/: mod.rs  ollama.rs  onboarding.rs
apps/desktop/src/app/: AppShell.tsx  ErrorBoundary.tsx  (+2 more)
docs/: architecture.md  privacy.md
docs/adr/: 0001-icon-path-workaround.md
vault-template/00-Core/: core-memory.md  profile.md
vault-template/Knowledge/: welcome.md
(+76 files in other folders)
